<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>

    <!-- Menu label to fetch updated weather info -->
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Label for the location preference [char limit 30]-->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [char limit none] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [char limit none]-->
    <string name="pref_location_default" translatable="false">84123</string>

    <!-- Label for temperature units [char limit 30]-->
    <string name="pref_units_label">Temperature Units</string>

    <!-- Label for metric option [char limit 30]-->
    <string name="pref_units_label_metric">Metric</string>

    <!-- Label for imperial option [char limit 30]-->
    <string name="pref_units_label_imperial">Imperial</string>

    <!-- Label for pref units key [char limit 30]-->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Label for pref units metric[char limit 30]-->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Label for pref units metric[char limit 30]-->
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment"></string>

</resources>
